--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 autopep8==1.4.3
 boto3==1.9.192
 botocore==1.12.192
+braintree==3.55.0
 certifi==2019.6.16
+chardet==3.0.4
 Click==7.0
 colorama==0.4.1
 cssmin==0.2.0
@@ -11,6 +13,7 @@ Flask-Assets==0.12
 Flask-Cors==3.0.7
 Flask-Login==0.4.1
 Flask-WTF==0.14.2
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
 jmespath==0.9.4
@@ -22,6 +25,7 @@ psycopg2-binary==2.7.7
 pycodestyle==2.5.0
 python-dateutil==2.8.0
 python-dotenv==0.10.1
+requests==2.22.0
 s3transfer==0.2.1
 six==1.12.0
 urllib3==1.25.3
