--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ e==1.4.5
 Flask==1.0.2
 Flask-Assets==0.12
 Flask-Cors==3.0.7
+Flask-JWT-Extended==3.20.0
 Flask-Login==0.4.1
 Flask-WTF==0.14.2
 gunicorn==19.9.0
@@ -30,6 +31,7 @@ peewee-db-evolve==3.7.0
 psycopg2-binary==2.7.7
 pycodestyle==2.5.0
 pycparser==2.19
+PyJWT==1.7.1
 python-dateutil==2.8.0
 python-dotenv==0.10.1
 python-http-client==3.1.0
